--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     display: block;
     padding: 0;
-    font-family: "Poppins","Noto Sans", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-style:normal;
 }
 
@@ -37,8 +37,8 @@ header{
 
 .main-title{
     color: white;
-    font-weight: bolder;
-    font-family: "Roboto Slab", serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
     font-style: normal;
 }
 
@@ -92,7 +92,7 @@ footer{
 
 .camiseta-card{
     border: 2px solid black;
-    width: 300px;
+    width: 400px;
     height: 466px;
     margin-bottom: 80px;
     text-align: center;
@@ -107,7 +107,7 @@ footer{
 }
 
 .camiseta-image{
-    width: 300px;
+    width: 400px;
     height: 400px;
 }
 
@@ -130,7 +130,7 @@ footer{
 }
 
 .novidades-image{
-    width: 200px;
+    width: 300px;
     height: 300px;
 }
 
@@ -167,6 +167,27 @@ footer{
     justify-content: center;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    justify-items: center;
+}
+
+.grid-item {
+    text-align: center;
+}
+
+.grid-item img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+.grid-item h3 {
+    margin: 10px 0;
+}
+
 @media only screen and (max-width: 600px) {
     .footer-image{
         display: none;
@@ -181,6 +202,9 @@ footer{
         justify-content: center;
         justify-self: center;
         justify-items: center;
+    },
+    .grid-container {
+        grid-template-columns: 1fr;
     }
 }
 
